--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,91 @@ body{
   line-height: 2;
   font-size: 2rem;
 }
+h1{
+  color: var(--secundario);
+  text-align: center;
+  font-size: 4rem;
+  font-family: var(--fuentePrincipal);
+}
+img{
+  max-width: 100%;
+}
+.contenedor{
+  max-width: 1000px;
+  width: 95%;
+  margin: 0 auto;
+}
+.header {
+  display: grid;
+  justify-content: center;
+  padding: 3rem 0;
+}
 .barra {
   background-color: var(--primarioOscuro);
   padding: 1rem 0;
 }
 .barra .nav {
   display: grid;
-  grid-template-columns: 
+  grid-template-columns: repeat(2, auto);
+  grid-column-gap: 1rem;
   justify-content: center;
+}
+.barra .nav a {
+  font-family: var(--fuentePrincipal);
+  font-size: 3rem;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+}
+.barra .nav a:hover {
+  color: var(--secundario);
+}
+.lista-productos {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
+@media (min-width: 768px) {
+  .lista-productos {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.producto {
+  background-color: var(--primarioOscuro);
+  padding: 1rem;
+}
+.contenido-producto p {
+  font-family: var(--fuentePrincipal);
+  color: #fff;
+  text-align: center;
+  margin: 1rem 0;
+  line-height: 1.2;
+}
+.contenido-producto .titulo {
+  font-size: 4rem;
+}
+.contenido-producto .precio {
+  color: var(--secundario);
+  font-size: 2.8rem;
+}
+.grafico {
+  min-height: 300px;
+  background-size: cover;
+  background-position: center center;
+}
+.grafico-1 {
+  background-image: url(../img/grafico1.jpg);
+  grid-row: 2 / 3;
+  grid-column: 1 / 3;
+}
+.grafico-2 {
+  background-image: url(../img/grafico2.jpg);
+  grid-row: 8 / 9;
+  grid-column: 1 / 3;
+}
+@media (min-width: 768px) {
+  .grafico-2{
+    grid-row: 5 / 6;
+    grid-column: 2 / 4;
+  }
 }
