--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ h1{
   font-size: 4rem;
   font-family: var(--fuentePrincipal);
 }
+p {
+  font-size: 1.8rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
+  margin-top: 0;
+}
 img{
   max-width: 100%;
 }
@@ -103,4 +109,64 @@ img{
     grid-row: 5 / 6;
     grid-column: 2 / 4;
   }
+}
+.contenedor-informacion{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.contenedor-informacion img {
+  max-width: 100%;
+  margin: 0 auto;
+}
+.contenedor-informacion {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+   grid-column-gap: 2rem;
+  }
+.imagen-producto {
+  width: 100%;
+}
+
+.footer{
+  background-color: var(--primarioOscuro);
+  padding: 1rem 0;
+  margin-top: 2rem;
+}
+.copyright {
+  font-family: var(--fuentePrincipal);
+  color: #fff;
+  font-size: 2.2rem;
+  text-align: center;
+}
+.formulario-pedido {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 6rem);
+  grid-gap: 1rem;
+}
+.campo {
+  background-color: transparent;
+  border: 5px solid #fff;
+  font-family: var(--fuentePrincipal);
+  font-size: 3rem;
+  padding: 1rem;
+  width: 100%;
+  color: #fff;
+}
+.talla {
+  -webkit-appearance: none;
+  grid-column: 1 / 3;
+}
+.boton{
+  background-color: var(--secundario);
+  font-size: 2rem;
+  font-family: var(--fuentePrincipal);
+  border: none;
+  transition: background-color .3s ease;
+  grid-column: 1 / 4;
+}
+.boton:hover {
+  cursor: pointer;
+  background-color: rgb(233, 187, 2)
 }
